--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^1.35.4",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
