--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.4",
+    "africastalking": "^0.5.5",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "next": "12.2.3",
