--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
-    "next": "12.2.3",
+    "next": "^12.2.5",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.7",
     "yup": "^0.32.11",
