--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.4",
+    "@tailwindui/react": "^0.1.1",
     "africastalking": "^0.5.5",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
