--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "africastalking": "^0.5.5",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.4",
     "moment": "^2.29.4",
     "next": "^12.2.5",
     "nprogress": "^0.2.0",
