--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindui/react": "^0.1.1",
     "africastalking": "^0.5.5",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.4",
     "moment": "^2.29.4",
