--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindui/react": "^0.1.1",
     "africastalking": "^0.5.5",
     "axios": "^0.27.2",
+    "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.4",
@@ -20,6 +21,7 @@
     "next": "^12.2.5",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.7",
