--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "moment": "^2.29.4",
     "next": "^12.2.5",
     "nprogress": "^0.2.0",
+    "puppeteer": "^19.2.2",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.7",
+    "swr": "^1.3.0",
     "whois": "^2.13.9",
     "whoiser": "^1.13.1",
     "yup": "^0.32.11",
