--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.4",
+    "kbar": "^0.1.0-beta.38",
     "moment": "^2.29.4",
     "next": "^12.2.5",
     "nprogress": "^0.2.0",
