--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.7",
+    "sendpulse-api": "^1.1.5",
     "swr": "^1.3.0",
     "whois": "^2.13.9",
     "whoiser": "^1.13.1",
