--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,7 +14,6 @@
     "africastalking": "^0.5.5",
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
-    "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.4",
     "kbar": "^0.1.0-beta.38",
@@ -29,7 +28,6 @@
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.7",
     "sendpulse-api": "^1.1.5",
-    "swr": "^1.3.0",
     "whois": "^2.13.9",
     "whoiser": "^1.13.1",
     "yup": "^0.32.11",
